--- a/package.json
+++ b/package.json
@@ -11,15 +11,23 @@
   "dependencies": {
     "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.4",
+    "@storyofams/next-api-decorators": "^1.6.0",
     "@tailwindcss/forms": "^0.3.4",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "next": "11.1.2",
+    "path-to-regexp": "^6.2.0",
     "phosphor-react": "^1.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.8",
+    "@babel/plugin-proposal-decorators": "^7.15.8",
     "@types/react": "17.0.30",
     "autoprefixer": "^10.3.7",
+    "babel-plugin-parameter-decorator": "^1.0.16",
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "postcss": "^8.3.9",
