--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@tailwindcss/forms": "^0.3.4",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
-    "next": "11.1.2",
+    "next": "^12.0.1",
     "path-to-regexp": "^6.2.0",
     "phosphor-react": "^1.3.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
